Fix two Java 17 runtime blockers, repair the portal java.time deserialisation, and hold the migration to its specified scope
Runtime blockers found by deploying and logging in on Java 17, neither of
which the build or the unit suite can reveal:

* EclipseLink's repackaged bytecode reader (org.eclipse.persistence.asm
  2.6.0) cannot read a release-17 class file, so JPA metadata came back
  silently empty and the root context failed. The reader alone moves to
  9.1.0 through a new eclipselink-asm.version property; the ORM stays at
  2.6.0, so no query, mapping, caching or DDL behaviour changes.
* spring-ldap-core 2.3.3 holds the JNDI provider as a compile-time class
  literal on an encapsulated java.naming class, so class initialisation
  raised IllegalAccessError and every login returned HTTP 500. It moves to
  the 2.3.4.RELEASE patch that resolves the factory by name - no JVM flag.

Reinstated-EE provider convergence in the root POM, so exactly one JAXB API,
one JAXB runtime and one activation provider is resolvable anywhere in the
reactor: exclusions on the JAXB runtime, the JavaMail trio, stax-ex,
cxf-rt-rs-client, milton-server-ce, camel-xml-jaxb and tika-parsers, each
attached to the version mediation already selected so no artifact moves
version. WEB-INF/lib now carries jaxb-api 2.3.1, jaxb-runtime 2.3.9 and
javax.activation 1.2.0 and none of their duplicates; the jakarta namespace
is still never introduced.

Production fix for the portal request providers: FOIA and SAR now deserialise
through a mapper that registers a java.time-refusing module, reproducing the
Java 8 outcome exactly (a payload with no dates is accepted, one carrying a
date is refused) instead of failing every request with
InaccessibleObjectException. No production access flag and no widening of the
accepted request shape. The raw payload also stops travelling in the failure
message.

Test-runner configuration: surefire restates the four default include
patterns plus the one non-conforming test